<resources>
    <string name="app_name">Digikala</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="best_sellers">پرفروش ترین ها</string>
    <string name="most_views">پربازدید ترین ها</string>
    <string name="newests">جدید ترین ها</string>
    <string name="whole_list">لیست کامل</string>

    <string name="tomans">تومان</string>
    <string name="product_name">نام محصول : </string>
    <string name="product_detail">مشخصات</string>
    <string name="product_comments">نظرات کاربران</string>
    <string name="more_detail">ادامه مطلب</string>
    <string name="sell_by">فروش توسط</string>
    <string name="ready_for_send_storage">آماده ارسال از انبار دیجی کالا</string>
    <string name="product_garanty">گارانتی ۱۸ ماهه دیجی کالا</string>
    <string name="add_to_cart">اضافه کردن به سبد خرید</string>
    <string name="color">رنگ</string>
    <string name="categories">دسته بندی ها</string>
    <string name="shopping_cart">سبد خرید</string>
    <string name="search">جستجو</string>
    <string name="okay_dialog_button">OK</string>
    <string name="error_String">خطا</string>
    <string name="error_server">سرور در دسترس نیست </string>
    <string name="error_404"> نتيجه اي يافت نشد !😟</string>
    <string name="error_not_connected">عدم اتصال به اینترنت </string>
    <string name="count">تعداد</string>
    <string name="delete">حذف</string>
    <string name="discount_shopping_cart">جمع سبد خرید</string>
    <string name="continue_shopping">ادامه فرآیند خرید</string>
    <string name="register">ثبت نام</string>
    <string name="dialog_register_title"> برای ثبت سفارش ثبت نام کنید </string>
    <string name="dialog_register_message"> کاربر گرامی برای ثبت سفارش در دیجی کالا ابتدا ثبت نام کنید </string>
    <string name="coupon">اعمال کد تخفیف</string>
    <string name="valid_coupon_message"> کد تخفیف با موفقیت اعمال شد</string>
    <string name="invalid_coupon_message">کد تخفیف نامعتبر است</string>
    <string name="enter_coupon_message">لطفا کد تخفیف را وارد کنید</string>
    <string name="addresses">آدرس ها</string>
    <string name="setting">تنظیمات</string>
    <string name="address_name">عنوان آدرس</string>
    <string name="address_field">نشانی</string>
    <string name="insert_address">ایجاد آدرس</string>
    <string name="account">حساب کاربری</string>
    <string name="log_out">خروج از حساب کاربری</string>


    <string-array name="colors">
        <item>مشکی</item>
        <item>قرمز</item>
        <item>سفید</item>
        <item>بنفش</item>
        <item>آبی</item>
        <item>سبز</item>
        <item>زرد</item>
        <item>نارنجی</item>
    </string-array>

</resources>