<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="productViewModel"
            type="com.example.digikalasample.viewmodel.ProductViewModel" />
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/digikala_dark_white"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/digikala_red">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/product_detail_view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:layoutDirection="rtl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.viewpager.widget.ViewPager>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <com.google.android.material.button.MaterialButton
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="52dp"
                        android:layout_height="60dp"
                        app:backgroundTint="@color/nothing"
                        app:icon="@drawable/ic_share"
                        app:iconSize="20dp"
                        app:iconTint="@color/digikala_light_gray"
                        app:rippleColor="@android:color/darker_gray" />

                    <com.google.android.material.button.MaterialButton
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="52dp"
                        android:layout_height="60dp"
                        app:backgroundTint="@color/nothing"
                        app:icon="@drawable/ic_like"
                        app:iconSize="20dp"
                        app:iconTint="@color/digikala_light_gray"
                        app:rippleColor="@android:color/darker_gray" />

                    <com.google.android.material.button.MaterialButton
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="52dp"
                        android:layout_height="60dp"
                        app:backgroundTint="@color/nothing"
                        app:icon="@drawable/ic_alarm"
                        app:iconSize="20dp"
                        app:iconTint="@color/digikala_light_gray"
                        app:rippleColor="@android:color/darker_gray" />

                    <me.relex.circleindicator.CircleIndicator
                        android:id="@+id/indicator"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:ci_drawable="@drawable/indicator_color"
                        />
                </LinearLayout>

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="@font/far_roya_bd"
                    android:gravity="right"
                    android:text="@{productViewModel.MProduct.name}"
                    android:textSize="18sp" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reviewsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="4dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/far_trafc_bd"
                android:text="@string/product_comments"
                android:textColor="@color/digikala_dark_blue_gray"
                android:textSize="10dp"
                app:backgroundTint="@color/digikala_raw_white"
                app:cornerRadius="0dp"
                app:icon="@drawable/ic_comment"
                app:iconGravity="textStart"
                app:iconSize="20dp"
                app:iconTint="@color/digikala_blue_gray"
                app:rippleColor="@android:color/darker_gray" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/detailButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="0.5"
                android:fontFamily="@font/far_trafc_bd"
                android:text="@string/product_detail"
                android:textColor="@color/digikala_dark_blue_gray"
                android:textSize="10dp"
                app:backgroundTint="@color/digikala_raw_white"
                app:cornerRadius="0dp"
                app:icon="@drawable/ic_detail"
                app:iconGravity="textStart"
                app:iconSize="20dp"
                app:iconTint="@color/digikala_blue_gray"
                app:rippleColor="@android:color/darker_gray" />


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/CardView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:visibility="visible"
            tools:visibility="visible">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/product_color_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:textDirection="rtl"
                        tools:ignore="TouchTargetSizeCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:fontFamily="@font/iran_yekan"
                        android:text="@string/color"
                        android:textSize="12dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="12dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/iran_yekan"
                        android:text="@string/product_garanty"
                        android:textSize="10dp" />


                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="?android:attr/listDivider" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right"
                        android:layout_marginRight="4dp"
                        android:fontFamily="@font/iran_yekan"
                        android:text="دیجی کالا"
                        android:textColor="@color/digikala_red"
                        android:textSize="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|right"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/iran_yekan"
                        android:text="@string/sell_by"
                        android:textSize="10dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="12dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/iran_yekan"
                        android:text="@string/ready_for_send_storage"
                        android:textSize="10dp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:fontFamily="@font/far_trafc_bd"
                        android:gravity="left"
                        android:text="@{productViewModel.MProduct.price+` تومان `}"
                        android:textColor="@color/digikala_green"
                        android:textSize="17dp" />


                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_add_to_shopping_cart"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/iran_yekan"
                    android:text="@string/add_to_cart"
                    app:backgroundTint="@color/digikala_red_origin"
                    app:cornerRadius="0dp"
                    app:icon="@drawable/ic_shopping_cart"
                    app:iconGravity="textStart"
                    app:iconSize="22dp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:visibility="visible"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/iran_yekan"
                    android:lineSpacingExtra="4dp"
                    android:paddingLeft="12dp"
                    android:paddingTop="4dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="4dp"
                    android:text='@{productViewModel.MProduct == null ? "" : productViewModel.MProduct.description}'
                    android:textColor="@color/digikala_gray"
                    android:textDirection="rtl"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/product_detail_nextDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/iran_yekan"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/more_detail"
                    android:textColor="@color/digikala_gray"
                    android:textSize="10dp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayoutRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewComments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/review_item" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>

</layout>